Initial commit of debian-nano build using stable dist

--- a/supportFiles/grub.cfg
+++ b/supportFiles/grub.cfg
@@ -27,3 +27,7 @@ menuentry "Debian Live [EFI/GRUB] (nomodeset)" {
     initrd ($root)/live/initrd
 }
 
+menuentry "Debian Live [EFI/GRUB] (toram)" {
+    linux ($root)/live/vmlinuz boot=live toram
+    initrd ($root)/live/initrd
+}
