--- a/supportFiles/isolinux.cfg
+++ b/supportFiles/isolinux.cfg
@@ -20,8 +20,14 @@ LABEL linux
   KERNEL /live/vmlinuz
   APPEND initrd=/live/initrd boot=live
 
-LABEL linux
+LABEL linux-nomodeset
   MENU LABEL Debian Live (nomodeset)
   MENU DEFAULT
   KERNEL /live/vmlinuz
   APPEND initrd=/live/initrd boot=live nomodeset
+
+LABEL linux-toram
+  MENU LABEL Debian Live (toram)
+  MENU DEFAULT
+  KERNEL /live/vmlinuz
+  APPEND initrd=/live/initrd boot=live toram
