--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: "Build Debian Live Minimal ISO"
+name: "Build Debian Live Nano ISO"
 
 on:
   schedule:
@@ -21,7 +21,8 @@ jobs:
     steps:
       - name: "Get Date"
         run: |
-          echo "DATESTAMP=$(date +'%Y-%m-%d')" >> $GITHUB_ENV 
+          echo "DATESTAMP=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+          echo "ISOSTAMP=$(date +'%Y%m')" >> $GITHUB_ENV 
 
       - name: "Checking out git repository"
         uses: actions/checkout@v2
@@ -30,13 +31,30 @@ jobs:
         run: |
           ./build.sh
 
-      - name: "Publish"
+      - name: "Publish Date-Time"
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
           automatic_release_tag: "${{ env.DATESTAMP }}"
-          title: "Debian 10 Live Minimal ISO"
+          title: "Debian Stable Live Nano ISO"
           files: |
-            output/debian10-live-minimal-x86_64.iso
+            output/debian-stable-live-nano-x86_64-${{ env.ISOSTAMP }}.iso
+            output/packages.txt
+
+      - name: "Delete latest"
+        uses: liudonghua123/delete-release-action@v1
+        with:
+          release_name: 'latest'
+          suppress_errors: true
+
+      - name: "Publish"
+        uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          prerelease: false
+          automatic_release_tag: "latest"
+          title: "Debian Stable Live Nano ISO"
+          files: |
+            output/debian-stable-live-nano-x86_64-latest.iso
             output/packages.txt
