--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,11 +42,12 @@ jobs:
             output/debian-stable-live-nano-x86_64-${{ env.ISOSTAMP }}.iso
             output/packages.txt
 
-      - name: "Delete latest"
-        uses: liudonghua123/delete-release-action@v1
+      - name: "Delete latest release."
+        uses: cb80/delrel@latest
+        continue-on-error: true
         with:
-          release_name: 'latest'
-          suppress_errors: true
+          tag: latest
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: "Get Date"
         run: |
